--- a/ProjectTreeShoolCommon/indexstyle.css
+++ b/ProjectTreeShoolCommon/indexstyle.css
@@ -119,7 +119,7 @@ main{
 /* sections start */
 
 section{
-    width: 400px;
+    width: 28%;
 }
 
 section h2{
@@ -134,4 +134,404 @@ section li{
 
 section a:hover{
     color: green;
+}
+
+/* media query */
+
+@media screen and (max-width:1800px) {
+    .navbar{
+        background-color: #11161d;
+        width: 1800px;
+        height: 60px;
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 200;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .nav-container{
+        width: 1260px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    
+    .logo{
+        width: 100px;
+    }
+    
+    .logo img{
+        width: 100%;
+    }
+    
+    .links-container{
+        width: 480px;
+        display: flex;
+        justify-content: space-evenly;
+        gap: 5px;
+        text-transform: capitalize;
+    }
+    
+    header{
+        position: relative;
+        top: 80px;
+        left: 0;
+        display: flex;
+        justify-content: center;
+        margin-bottom: 2%;
+        width: 1800px;
+    }
+
+    .headercontainer{
+        width: 1080px;
+    }
+
+    .headercontainer h1{
+        font-size: 3em;
+        padding: 2% 0;
+        text-transform: uppercase;
+    }
+
+    .headercontainer p{
+        padding: 0;
+    }
+    main{
+        position: relative;
+        top: 80px;
+        left: 0;
+        display: flex;
+        justify-content: center;
+        margin-bottom: 2%;
+        width: 1800px;
+    }
+    
+    /* main section start */
+    
+    .mainsection{
+        width: 1080px;
+        display: flex;
+        flex-wrap: wrap;
+        column-gap: 40px;
+    }
+    
+    /* sections start */
+    
+    section{
+        width: 520px;
+    }
+    
+    section h2{
+        font-size: 2em;
+        padding: 1% 0;
+    }
+    
+    section li{
+        padding: 1% 0;
+        font-size: 1.3em;
+    }
+    
+    section a:hover{
+        color: green;
+    }
+}
+
+@media screen and (max-width:1300px) {
+    .navbar{
+        background-color: #11161d;
+        width: 1300px;
+        height: 60px;
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 200;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .nav-container{
+        width: 910px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+    
+    .logo{
+        width: 100px;
+    }
+    
+    .logo img{
+        width: 100%;
+    }
+    
+    .links-container{
+        width: 480px;
+        display: flex;
+        justify-content: space-evenly;
+        gap: 5px;
+        text-transform: capitalize;
+    }
+    
+    
+    header{
+        position: relative;
+        top: 80px;
+        left: 0;
+        display: flex;
+        justify-content: center;
+        margin-bottom: 2%;
+        width: 1300px;
+    }
+
+    .headercontainer{
+        width: 780px;
+    }
+
+    .headercontainer h1{
+        font-size: 3em;
+        padding: 2% 0;
+        text-transform: uppercase;
+    }
+
+    .headercontainer p{
+        padding: 0;
+    }
+    main{
+        position: relative;
+        top: 80px;
+        left: 0;
+        display: flex;
+        justify-content: center;
+        margin-bottom: 2%;
+        width: 1300px;
+    }
+    
+    /* main section start */
+    
+    .mainsection{
+        width: 960px;
+        display: flex;
+        flex-wrap: wrap;
+        column-gap: 40px;
+    }
+    
+    /* sections start */
+    
+    section{
+        width: 960px;
+    }
+    
+    section h2{
+        font-size: 2em;
+        padding: 1% 0;
+    }
+    
+    section li{
+        padding: 1% 0;
+        font-size: 1.3em;
+    }
+    
+    section a:hover{
+        color: green;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    .navbar{
+        background-color: #11161d;
+        width: 700px;
+        height: 90px;
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 200;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .nav-container{
+        width: 700px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .logo{
+        width: 80px;
+    }
+    
+    .logo img{
+        width: 100%;
+    }
+    
+    .links-container{
+        width: 700px;
+        display: flex;
+        justify-content: space-around;
+        gap: 5px;
+        text-transform: capitalize;
+    }
+    header{
+        position: relative;
+        top: 100px;
+        left: 0;
+        display: flex;
+        justify-content: center;
+        margin-bottom: 2%;
+        width: 700px;
+    }
+
+    .headercontainer{
+        width: 490px;
+    }
+
+    .headercontainer h1{
+        font-size: 3em;
+        padding: 2% 0;
+        text-transform: uppercase;
+    }
+
+    .headercontainer p{
+        padding: 0;
+    }
+
+    main{
+        position: relative;
+        top: 100px;
+        left: 0;
+        display: flex;
+        justify-content: center;
+        margin-bottom: 2%;
+        width: 700px;
+    }
+    
+    /* main section start */
+    
+    .mainsection{
+        width: 490px;
+        display: flex;
+        flex-wrap: wrap;
+        column-gap: 40px;
+    }
+    
+    /* sections start */
+    
+    section{
+        width: 490px;
+    }
+    
+    section h2{
+        font-size: 2em;
+        padding: 1% 0;
+    }
+    
+    section li{
+        padding: 1% 0;
+        font-size: 1.3em;
+    }
+    
+    section a:hover{
+        color: green;
+    }
+}
+
+@media screen and (max-width: 400px) {
+    .navbar{
+        background-color: #11161d;
+        width: 400px;
+        height: 90px;
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 200;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .nav-container{
+        width: 400px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .logo{
+        width: 100px;
+    }
+    
+    .logo img{
+        width: 100%;
+    }
+    
+    .links-container{
+        width: 400px;
+        display: flex;
+        justify-content: space-evenly;
+        gap: 5px;
+        text-transform: capitalize;
+    }
+    header{
+        position: relative;
+        top: 80px;
+        left: 0;
+        display: flex;
+        justify-content: center;
+        margin-bottom: 2%;
+        width: 400px;
+    }
+
+    .headercontainer{
+        width: 400px;
+    }
+
+    .headercontainer h1{
+        font-size: 3em;
+        padding: 2% 0;
+        text-transform: uppercase;
+    }
+
+    .headercontainer p{
+        padding: 0;
+    }
+    main{
+        position: relative;
+        top: 100px;
+        left: 0;
+        display: flex;
+        justify-content: center;
+        margin-bottom: 2%;
+        width: 400px;
+    }
+    
+    /* main section start */
+    
+    .mainsection{
+        width: 400px;
+        display: flex;
+    }
+    
+    /* sections start */
+    
+    section{
+        width: 400px;
+    }
+    
+    section h2{
+        font-size: 2em;
+        padding: 1% 0;
+    }
+    
+    section li{
+        padding: 1% 0;
+        font-size: 1.3em;
+    }
+    
+    section a:hover{
+        color: green;
+    }
 }
