--- a/ProjectTreeShoolCommon/indexstyle.css
+++ b/ProjectTreeShoolCommon/indexstyle.css
@@ -287,7 +287,7 @@ section a:hover{
     }
 
     .headercontainer{
-        width: 780px;
+        width: 960px;
     }
 
     .headercontainer h1{
@@ -322,6 +322,105 @@ section a:hover{
     
     section{
         width: 960px;
+    }
+    
+    section h2{
+        font-size: 2em;
+        padding: 1% 0;
+    }
+    
+    section li{
+        padding: 1% 0;
+        font-size: 1.3em;
+    }
+    
+    section a:hover{
+        color: green;
+    }
+}
+
+@media screen and (max-width: 900px) {
+    .navbar{
+        background-color: #11161d;
+        width: 900px;
+        height: 90px;
+        position: fixed;
+        top: 0;
+        left: 0;
+        z-index: 200;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .nav-container{
+        width: 900px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+    
+    .logo{
+        width: 90px;
+    }
+    
+    .logo img{
+        width: 100%;
+    }
+    
+    .links-container{
+        width: 900px;
+        display: flex;
+        justify-content: space-around;
+        text-transform: capitalize;
+    }
+    header{
+        position: relative;
+        top: 100px;
+        left: 0;
+        display: flex;
+        justify-content: center;
+        margin-bottom: 2%;
+        width: 900px;
+    }
+
+    .headercontainer{
+        width: 690px;
+    }
+
+    .headercontainer h1{
+        font-size: 3em;
+        padding: 2% 0;
+        text-transform: uppercase;
+    }
+
+    .headercontainer p{
+        padding: 0;
+    }
+
+    main{
+        position: relative;
+        top: 100px;
+        left: 0;
+        display: flex;
+        justify-content: center;
+        margin-bottom: 2%;
+        width: 900px;
+    }
+    
+    /* main section start */
+    
+    .mainsection{
+        width: 690px;
+        display: flex;
+        flex-wrap: wrap;
+        column-gap: 40px;
+    }
+    
+    /* sections start */
+    
+    section{
+        width: 690px;
     }
     
     section h2{
